base navbar footer done

--- a/Simply_Client/templates/home.html
+++ b/Simply_Client/templates/home.html
@@ -1,4 +1,7 @@
-{% extends "base.html" %} {% block content %}
+{% extends "base.html" %} {% load static %} {% block style %}
+<link rel="stylesheet" href="{% static 'css/home.css' %}" />
+{% endblock %} {% block title %} Welcome {% endblock %} {% block content %}
+
 <div class="cobak">
     test
 </div>
