--- a/Simply_Client/templates/base.html
+++ b/Simply_Client/templates/base.html
@@ -4,18 +4,21 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    {% laod static %}
+    <script src="https://kit.fontawesome.com/ffebcdddeb.js" crossorigin="anonymous"></script>
+    {% load static %}
+    {% block style%}{% endblock %}
+    <link rel="stylesheet" href="{% static 'css/base.css' %}">
 
     <title>{% block title %} {% endblock %}</title>
 </head>
 
 <body>
     <nav>
-        <img src="{% static 'Simply Logo.png'%}" alt="logo simply">
+        <img src="{% static 'img/Simply Logo.png'%}" alt="logo simply">
         <div class="right-text-place">
-            <a href="">Apply</a>
-            <a href="">Tracking</a>
-            <a href="">Username</a>
+            <a href="">Apply<span></span></a>
+            <a href="">Tracking<span></span></a>
+            <a href="">Username<span></span></a>
         </div>
     </nav>
     <main>
@@ -24,21 +27,24 @@
     </main>
     <footer>
         <div class="main-footer">
-            <div class="left-upper">
-                <img src="{% static 'Polri Logo.png' %}" alt="logo kepolisian republik indonesia">
-                <i class="fab fa-instagram"></i>
-                <i class="fab fa-twitter"></i>
-                <i class="fab fa-facebook"></i>
-                <i class="fab fa-linkedin"></i>
-                <i class="fab fa-youtube"></i>
-                <i class="fab fa-tiktok"></i>
-                <i class="fab fa-whatsapp"></i>
+            <div class="left-part">
+                <img src="{% static 'img/Polri Logo.png' %}" alt="logo kepolisian republik indonesia">
+                <div class="socmed-logo">
+                    <i class="fab fa-instagram"></i>
+                    <i class="fab fa-twitter"></i>
+                    <i class="fab fa-facebook"></i>
+                    <i class="fab fa-linkedin"></i>
+                    <i class="fab fa-youtube"></i>
+                    <i class="fab fa-tiktok"></i>
+                    <i class="fab fa-whatsapp"></i>
+                </div>
             </div>
             <div class="column-flex-text">
                 <div class="tab-contact-us">
                     <h3>Contact Us</h3>
+                    </br>
                     <p>Visit us: </br>
-                        Jl. MT Haryono No.37-38, RT.8/RW.2, Cikoko, Pancoran, Jakarta Selatan Jakarta 12770
+                        Jl. MT Haryono No.37-38, RT.8/RW.2,</br> Cikoko, Pancoran, Jakarta Selatan</br>Jakarta 12770
                         </br>
                         </br>
                         Call us at +62 81 233 834 102</br>
@@ -46,16 +52,27 @@
                 </div>
                 <div class="tab-list">
                     <h3>About Us</h3>
+                    </br>
                     <a href="">Korlantas Polri</a>
                     <a href="">Benefits</a>
                     <a href="">Careers</a>
                 </div>
                 <div class="tab-list">
+                    <h3>Legal</h3>
+                    </br>
                     <a href="">Terms & Condition</a>
                     <a href="">Privacy Policy</a>
                     <a href="">Terms of Use</a>
                 </div>
-                <div class="tab-list"></div>
+                <div class="tab-list">
+                    <h3>Service</h3>
+                    </br>
+                    <a href="">SIM C Application</a>
+                    <a href="">SIM A Application</a>
+                    <a href="">Tracking</a>
+                    <a href="">Help Center</a>
+                    <a href="">FAQ</a>
+                </div>
             </div>
         </div>
     </footer>
