--- a/Simply_Client/static/css/base.css
+++ b/Simply_Client/static/css/base.css
@@ -5,7 +5,6 @@
 
 body {
     font-family: 'Montserrat';
-    background-color: #fdeb32;
 }
 
 nav {
@@ -34,6 +33,9 @@ nav a {
     -moz-transition: all .5s ease;
     -ms-transition: all .5s ease;
     -o-transition: all .5s ease;
+    display: flex;
+    flex-direction: column;
+    gap: 8px;
     box-sizing: border-box;
 }
 
@@ -41,9 +43,7 @@ nav a span {
     width: 0;
     height: 4px;
     background-color: #0E65D9;
-    position: absolute;
     bottom: -8px;
-    left: 0;
     border-radius: 2px;
     -webkit-border-radius: 2px;
     -moz-border-radius: 2px;
@@ -54,6 +54,11 @@ nav a span {
     -moz-transition: .5s ease;
     -ms-transition: .5s ease;
     -o-transition: .5s ease;
+    align-items: center;
+}
+
+nav a:hover span {
+    width: 100%;
 }
 
 .right-text-place {
