--- a/Simply_Client/static/css/base.css
+++ b/Simply_Client/static/css/base.css
@@ -17,6 +17,7 @@ nav {
     align-items: center;
     box-sizing: border-box;
     padding: 0 240px;
+    box-shadow: #d3d3d3 1px 5px 20px;
 }
 
 nav img {
@@ -28,11 +29,6 @@ nav a {
     text-decoration: none;
     font-size: 24px;
     color: #000;
-    transition: all .5s ease;
-    -webkit-transition: all .5s ease;
-    -moz-transition: all .5s ease;
-    -ms-transition: all .5s ease;
-    -o-transition: all .5s ease;
     display: flex;
     flex-direction: column;
     gap: 8px;
@@ -49,11 +45,11 @@ nav a span {
     -moz-border-radius: 2px;
     -ms-border-radius: 2px;
     -o-border-radius: 2px;
-    transition: .5s ease;
-    -webkit-transition: .5s ease;
-    -moz-transition: .5s ease;
-    -ms-transition: .5s ease;
-    -o-transition: .5s ease;
+    transition: all .5s ease;
+    -webkit-transition: all .5s ease;
+    -moz-transition: all .5s ease;
+    -ms-transition: all .5s ease;
+    -o-transition: all .5s ease;
     align-items: center;
 }
 
