--- a/Simply_Client/templates/home.html
+++ b/Simply_Client/templates/home.html
@@ -2,7 +2,8 @@
 <link rel="stylesheet" href="{% static 'css/home.css' %}" />
 {% endblock %} {% block title %} Welcome {% endblock %} {% block content %}
 
-<div class="cobak">
-    test
+<div class="containerch">
+
 </div>
+
 {% endblock %}
