--- a/Simply_Client/templates/base.html
+++ b/Simply_Client/templates/base.html
@@ -5,6 +5,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="https://kit.fontawesome.com/ffebcdddeb.js" crossorigin="anonymous"></script>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,200;0,400;0,700;1,400&display=swap" rel="stylesheet">
     {% load static %}
     {% block style%}{% endblock %}
     <link rel="stylesheet" href="{% static 'css/base.css' %}">
@@ -53,9 +56,9 @@
                 <div class="tab-list">
                     <h3>About Us</h3>
                     </br>
-                    <a href="">Korlantas Polri</a>
-                    <a href="">Benefits</a>
-                    <a href="">Careers</a>
+                    <a style="" href="">Korlantas Polri</a>
+                    <a style="" href="">Benefits</a>
+                    <a style="" href="">Careers</a>
                 </div>
                 <div class="tab-list">
                     <h3>Legal</h3>
