--- a/Simply_Client/static/css/base.css
+++ b/Simply_Client/static/css/base.css
@@ -64,7 +64,7 @@ nav a:hover span {
 }
 
 footer {
-    position: absolute;
+    position: fixed;
     bottom: 0;
     width: 100%;
     height: 260px;
