--- a/Simply_Client/templates/base.html
+++ b/Simply_Client/templates/base.html
@@ -7,7 +7,8 @@
     <script src="https://kit.fontawesome.com/ffebcdddeb.js" crossorigin="anonymous"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,200;0,400;0,700;1,400&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,200;0,400;0,700;1,400&display=swap"
+        rel="stylesheet">
     {% load static %}
     {% block style%}{% endblock %}
     <link rel="stylesheet" href="{% static 'css/base.css' %}">
@@ -56,9 +57,9 @@
                 <div class="tab-list">
                     <h3>About Us</h3>
                     </br>
-                    <a style="" href="">Korlantas Polri</a>
-                    <a style="" href="">Benefits</a>
-                    <a style="" href="">Careers</a>
+                    <a href="">Korlantas Polri</a>
+                    <a href="">Benefits</a>
+                    <a href="">Careers</a>
                 </div>
                 <div class="tab-list">
                     <h3>Legal</h3>
