--- a/Simply_Client/static/css/home.css
+++ b/Simply_Client/static/css/home.css
@@ -1,9 +1,11 @@
 /* File: static/css/home.css */
+
 .container {
     margin-top: 40px;
     box-sizing: border-box;
     padding: 0 240px;
     text-align: center;
+    height: 1080px;
 }
 
 .card-container {
@@ -16,7 +18,8 @@
 }
 
 .card {
-    position: relative; /* Add this to make the positioning relative */
+    position: relative;
+    /* Add this to make the positioning relative */
     width: 400px;
     height: 600px;
     border-radius: 45px;
@@ -34,7 +37,8 @@
     padding-left: 55px;
     transform: translateY(470px);
     transition: all .5s ease;
-    opacity: 0; /* Set initial opacity to 0 */
+    opacity: 0;
+    /* Set initial opacity to 0 */
 }
 
 .card-text h1 {
@@ -55,5 +59,6 @@
 
 .card:hover .card-text {
     transform: translateY(280px);
-    opacity: 1; /* Set opacity to 1 on hover */
+    opacity: 1;
+    /* Set opacity to 1 on hover */
 }
