--- a/Simply_Client/static/css/home.css
+++ b/Simply_Client/static/css/home.css
@@ -5,7 +5,6 @@
     box-sizing: border-box;
     padding: 0 240px;
     text-align: center;
-    height: 1080px;
 }
 
 .card-container {
@@ -37,8 +36,12 @@
     padding-left: 55px;
     transform: translateY(470px);
     transition: all .5s ease;
-    opacity: 0;
     /* Set initial opacity to 0 */
+}
+
+.card-text p {
+    opacity: 0;
+    transition: all .5s ease;
 }
 
 .card-text h1 {
@@ -59,6 +62,9 @@
 
 .card:hover .card-text {
     transform: translateY(280px);
-    opacity: 1;
     /* Set opacity to 1 on hover */
+}
+
+.card:hover .card-text p {
+    opacity: 1;
 }
