--- a/Simply_Client/static/css/base.css
+++ b/Simply_Client/static/css/base.css
@@ -5,7 +5,6 @@
 
 body {
   font-family: "Montserrat", sans-serif;
-  height: 1080px;
 }
 
 nav {
@@ -68,8 +67,8 @@ nav a:hover span {
 }
 
 footer {
-  position: absolute;
-  transform: translateY(300px);
+  position: sticky;
+  /* transform: translateY(300px); */
   bottom: 0;
   width: 100%;
   height: 260px;
