--- a/Simply_Client/templates/base.html
+++ b/Simply_Client/templates/base.html
@@ -18,10 +18,11 @@
 
 <body>
     <nav>
-        <img src="{% static 'img/Simply Logo.png'%}" alt="logo simply">
+        <a href="/home">
+            <img src="{% static 'img/Simply Logo.png'%}" alt="logo simply"></a>
         <div class="right-text-place">
             <a href="">Apply<span></span></a>
-            <a href="">Tracking<span></span></a>
+            <a href="/tracking">Tracking<span></span></a>
             <a href="">Username<span></span></a>
         </div>
     </nav>
