--- a/Simply_Client/templates/tracking.html
+++ b/Simply_Client/templates/tracking.html
@@ -3,14 +3,11 @@
 {% endblock %} {% block title %} Welcome {% endblock %} {% block content %}
 
 <!-- Head -->
+
 <head>
-  <link
-    rel="stylesheet"
-    href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"
     integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA=="
-    crossorigin="anonymous"
-    referrerpolicy="no-referrer"
-  />
+    crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
 
 <div style="text-align: center" class="containerch">
@@ -18,16 +15,11 @@
   <h1 style="margin: 50px">Status Pengajuan SIM</h1>
 
   <!-- Registrasi Data Diri -->
-  <div
-    class="box"
-    style="display: flex; flex-direction: row; justify-content: center"
-  >
+  <div class="box" style="display: flex; flex-direction: row; justify-content: center">
     <!-- bagian kiri -->
     <div class="left" style="display: flex; flex-direction: row">
       <!-- Angka Step -->
-      <div
-        class="Angka"
-        style="
+      <div class="Angka" style="
           width: 70px;
           height: 70px;
           justify-content: center;
@@ -36,16 +28,13 @@
           border: solid #3545a5 3.5px;
           margin-right: 5px;
           margin-top: 37px;
-        "
-      >
+        ">
         <!-- ANgka Step -->
         <h1 style="padding-top: 16px; color: #3545a5">1</h1>
       </div>
 
       <!-- Registrasi Data Diri -->
-      <div
-        class="regist-data-diri"
-        style="
+      <div class="regist-data-diri" style="
           border: #3545a5 solid 3.5px;
           width: auto;
           height: 150px;
@@ -54,18 +43,14 @@
           margin-right: 10px;
           display: flex;
           flex-direction: row;
-        "
-      >
+        ">
         <!-- Text Box -->
-        <div
-          class="text-box"
-          style="
+        <div class="text-box" style="
             text-align: left;
             margin: 20px;
             width: 200px;
             flex-direction: column;
-          "
-        >
+          ">
           <h3 style="color: #3545a5">Registrasi Data Diri</h3>
           <p style="font-size: 13px">
             Pengguna mengisi formulir data diri untuk memulai tahap pendaftaran
@@ -74,24 +59,19 @@
         </div>
 
         <!-- icon -->
-        <i
-          class="fa-solid fa-circle-check"
-          style="
+        <i class="fa-solid fa-circle-check" style="
             font-size: 70px;
             color: #3545a5;
             margin-left: 25px;
             margin-right: 50px;
             margin-top: 40px;
-          "
-        ></i>
+          "></i>
       </div>
     </div>
     <!-- bagian kanan -->
     <div class="left" style="display: flex; flex-direction: row">
       <!-- Angka Step -->
-      <div
-        class="Angka"
-        style="
+      <div class="Angka" style="
           width: 70px;
           height: 70px;
           justify-content: center;
@@ -100,16 +80,13 @@
           border: solid #3545a5 3.5px;
           margin-right: 5px;
           margin-top: 37px;
-        "
-      >
+        ">
         <!-- ANgka Step -->
         <h1 style="padding-top: 16px; color: #3545a5">2</h1>
       </div>
 
       <!-- Registrasi Data Diri -->
-      <div
-        class="regist-data-diri"
-        style="
+      <div class="regist-data-diri" style="
           border: #3545a5 solid 3.5px;
           width: auto;
           height: 150px;
@@ -118,18 +95,14 @@
           margin-right: 10px;
           display: flex;
           flex-direction: row;
-        "
-      >
+        ">
         <!-- Text Box -->
-        <div
-          class="text-box"
-          style="
+        <div class="text-box" style="
             text-align: left;
             margin: 20px;
             width: 200px;
             flex-direction: column;
-          "
-        >
+          ">
           <h3 style="color: #3545a5">Registrasi Data Diri</h3>
           <p style="font-size: 13px">
             Pengguna mengisi formulir data diri untuk memulai tahap pendaftaran
@@ -138,16 +111,13 @@
         </div>
 
         <!-- icon -->
-        <i
-          class="fa-solid fa-circle-check"
-          style="
+        <i class="fa-solid fa-circle-check" style="
             font-size: 70px;
             color: #3545a5;
             margin-left: 25px;
             margin-right: 50px;
             margin-top: 40px;
-          "
-        ></i>
+          "></i>
       </div>
     </div>
   </div>
