--- a/Simply_Client/templates/base-bar.html
+++ b/Simply_Client/templates/base-bar.html
@@ -27,6 +27,14 @@
         </div>
     </nav>
     <main>
+        <div class="sidebar">
+            <div class="tab">Registrasi Data Diri</div>
+            <div class="tab">Pembayaran</div>
+            <div class="tab">Unggah Dokumen</div>
+            <div class="tab">Validasi Dokumen</div>
+            <div class="tab">Jadwal Test</div>
+            <div class="tab">Pengiriman SIM</div>
+        </div>
         {% block content %}
         {% endblock %}
     </main>
