--- a/Simply_Client/templates/upload.html
+++ b/Simply_Client/templates/upload.html
@@ -1,4 +1,4 @@
-{% extends "base.html" %}
+{% extends "base-bar.html" %}
 {% load static %}{% block style%}
 <link rel="stylesheet" href="{% static 'css/upload.css' %}">
 {% endblock %}
