--- a/Simply_Client/static/css/upload.css
+++ b/Simply_Client/static/css/upload.css
@@ -5,9 +5,6 @@
 
 .container {
     margin-top: 140px;
+    margin-left: 300px;
     width: 100%;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-direction: column;
 }
