--- a/Simply_Client/templates/upload.html
+++ b/Simply_Client/templates/upload.html
@@ -7,8 +7,11 @@
 
 <div class="container">
   <div class="content-header">
-    <i class="fa-solid fa-chevron-left">Kembali</i>
-    <h3>Unggah DOkumen Kelengkapan</h3>
+    <a class="content-header-back">
+      <i class="fa-solid fa-chevron-left"></i>
+      <p>Kembali</p>
+    </a>
+    <h3>Unggah Dokumen Kelengkapan</h3>
   </div>
   <span></span>
   <div class="content-ktp">
@@ -45,6 +48,7 @@
       </p>
       <form action="" method="post" enctype="multipart/form-data"></form>
     </div>
+    <span></span>
     <div class="content-ktp-upload">
       <h1>
         Pas Foto 3x4
@@ -54,6 +58,7 @@
       </p>
       <form action="" method="post" enctype="multipart/form-data"></form>
     </div>
+    <span></span>
     <div class="content-ktp-upload">
       <h1>
         Tanda Tangan Digital
