--- a/Simply_Client/static/css/upload.css
+++ b/Simply_Client/static/css/upload.css
@@ -1,10 +1,43 @@
+:root {
+    --primary-color: #0E65D9;
+    --dark-color: #141414;
+    --greyish-color: #D9D9D9;
+}
+
 * {
     margin: 0;
     padding: 0;
 }
 
 .container {
-    margin-top: 140px;
-    margin-left: 300px;
     width: 100%;
+    border-radius: 10px;
+    border: 1px solid var(--greyish-color);
+    background: #FFF;
+}
+
+.container .content-header {
+    padding: 30px;
+}
+
+.container .content-header .content-header-back {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    gap: 5px;
+}
+
+.container .content-header .content-header-back i {
+    font-size: 10px;
+}
+
+.container span {
+    display: block;
+    height: 1px;
+    width: 100%;
+    background-color: var(--greyish-color);
+}
+
+.container .content-ktp {
+    padding: 30px;
 }
