--- a/Simply_Client/static/css/upload.css
+++ b/Simply_Client/static/css/upload.css
@@ -2,6 +2,7 @@
     --primary-color: #0E65D9;
     --dark-color: #141414;
     --greyish-color: #D9D9D9;
+    --light-color: #ffffff;
 }
 
 * {
@@ -21,6 +22,8 @@
 }
 
 .container .content-header .content-header-back {
+    text-decoration: none;
+    color: var(--dark-color);
     display: flex;
     flex-direction: row;
     align-items: center;
@@ -36,8 +39,104 @@
     height: 1px;
     width: 100%;
     background-color: var(--greyish-color);
+    margin: 10px 0;
 }
 
 .container .content-ktp {
     padding: 30px;
+}
+
+.container .content-ktp .content-ktp-note {
+    background-color: #FFDE16;
+    padding: 20px;
+    margin: 20px 0px;
+    display: flex;
+    flex-direction: row;
+    gap: 10px;
+    border-radius: 10px;
+    -webkit-border-radius: 10px;
+    -moz-border-radius: 10px;
+    -ms-border-radius: 10px;
+    -o-border-radius: 10px;
+}
+
+.container .content-ktp .content-ktp-note .right-part-warning {
+    margin-top: 10px;
+
+}
+
+.container .content-ktp .content-ktp-note .right-part-warning p {
+    margin-left: 20px;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    gap: 5px;
+}
+
+.container .content-ktp .content-ktp-note .right-part-warning i {
+    font-size: 4px;
+}
+
+/* content-ktp-upload */
+.upload-file {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.content-ktp-upload .upload-file input {
+    display: none;
+}
+
+.content-ktp-upload .upload-file label {
+    margin-top: 20px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    cursor: pointer;
+    width: 100%;
+    height: 100px;
+    border-radius: 10px;
+    border: 1px dashed var(--dark-color);
+    -webkit-border-radius: 10px;
+    -moz-border-radius: 10px;
+    -ms-border-radius: 10px;
+    -o-border-radius: 10px;
+    cursor: pointer;
+    color: var(--dark-color);
+    transition: all .3s ease-in-out;
+    -webkit-transition: all .3s ease-in-out;
+    -moz-transition: all .3s ease-in-out;
+    -ms-transition: all .3s ease-in-out;
+    -o-transition: all .3s ease-in-out;
+}
+
+.content-ktp-upload .upload-file label:hover {
+    color: var(--primary-color);
+    border: 1px dashed var(--primary-color);
+}
+
+/* content-footer */
+.content-footer {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 30px;
+}
+
+.content-footer button {
+    cursor: pointer;
+    padding: 10px;
+    border-radius: 5px;
+    background-color: var(--primary-color);
+    -webkit-border-radius: 5px;
+    -moz-border-radius: 5px;
+    -ms-border-radius: 5px;
+    -o-border-radius: 5px;
+    border: 1px solid var(--primary-color);
+}
+
+.content-footer button a {
+    text-decoration: none;
+    color: var(--light-color);
 }
