patch: create state sidebar

--- a/Simply_Client/templates/base-bar.html
+++ b/Simply_Client/templates/base-bar.html
@@ -36,8 +36,8 @@
                 <i class="fa-solid fa-wallet" style="margin-right: 10px;"></i>
                 <h3>Pembayaran</h3>
             </a>
-            <a href="" class="tab">
-                <i class="fa-solid fa-file" style="margin-right: 15px;"></i>
+            <a href="" class="tab" style="background-color: #0E65D9; color: #fff; ">
+                <i class="fa-solid fa-file" style="margin-right: 15px; "></i>
                 <h3>Unggah Dokumen</h3>
             </a>
             <a href="" class="tab">
