--- a/Simply_Client/static/css/upload.css
+++ b/Simply_Client/static/css/upload.css
@@ -89,13 +89,13 @@
 }
 
 .content-ktp-upload .upload-file label {
-    margin-top: 20px;
+    margin: 30px 0;
     display: flex;
     justify-content: center;
     align-items: center;
     cursor: pointer;
     width: 100%;
-    height: 100px;
+    height: 135px;
     border-radius: 10px;
     border: 1px dashed var(--dark-color);
     -webkit-border-radius: 10px;
@@ -134,9 +134,23 @@
     -ms-border-radius: 5px;
     -o-border-radius: 5px;
     border: 1px solid var(--primary-color);
+    transition: .3s ease-in-out;
+    -webkit-transition: .3s ease-in-out;
+    -moz-transition: .3s ease-in-out;
+    -ms-transition: .3s ease-in-out;
+    -o-transition: .3s ease-in-out;
 }
 
 .content-footer button a {
     text-decoration: none;
     color: var(--light-color);
+}
+
+.content-footer button:hover {
+    border: 1px solid var(--primary-color);
+    background-color: transparent;
+}
+
+.content-footer button:hover a {
+    color: var(--primary-color);
 }
