--- a/Simply_Client/static/css/form-reg.css
+++ b/Simply_Client/static/css/form-reg.css
@@ -1,158 +1,120 @@
+:root {
+  --primary-color: #0E65D9;
+  --dark-color: #141414;
+  --greyish-color: #D9D9D9;
+  --light-color: #ffffff;
+}
+
 * {
   margin: 0;
   padding: 0;
 }
 
-body {
-  font-family: "Montserrat", sans-serif;
+
+.container {
+  width: 100%;
+  border-radius: 10px;
+  border: 1px solid var(--greyish-color);
+  background: #FFF;
 }
 
-nav {
-  width: 100%;
-  height: 90px;
-  background-color: #fff;
+.container .content-header {
+  padding: 30px;
+}
+
+.container .content-header .content-header-back {
+  text-decoration: none;
+  color: var(--dark-color);
   display: flex;
   flex-direction: row;
-  justify-content: space-between;
   align-items: center;
-  box-sizing: border-box;
-  padding: 0 240px;
-  box-shadow: #d3d3d3 1px 5px 20px;
+  gap: 5px;
 }
 
-nav img {
-  width: 150px;
-  height: 50px;
+.container .content-header .content-header-back i {
+  font-size: 10px;
 }
 
-nav a {
-  text-decoration: none;
-  font-size: 24px;
-  color: #000;
-  display: flex;
-  flex-direction: column;
-  gap: 8px;
-  box-sizing: border-box;
-}
-
-nav a span {
-  width: 0;
-  height: 4px;
-  background-color: #0e65d9;
-  bottom: -8px;
-  border-radius: 2px;
-  -webkit-border-radius: 2px;
-  -moz-border-radius: 2px;
-  -ms-border-radius: 2px;
-  -o-border-radius: 2px;
-  transition: all 0.5s ease;
-  -webkit-transition: all 0.5s ease;
-  -moz-transition: all 0.5s ease;
-  -ms-transition: all 0.5s ease;
-  -o-transition: all 0.5s ease;
-  align-items: center;
-}
-
-nav a:hover span {
+.container span {
+  display: block;
+  height: 1px;
   width: 100%;
+  background-color: var(--greyish-color);
+  margin: 10px 0;
 }
 
-.right-text-place {
-  position: relative;
+.container .content-ktp {
+  padding: 30px;
+}
+
+.container .content-ktp .content-ktp-note {
+  background-color: #FFDE16;
+  padding: 20px;
+  margin: 20px 0px;
   display: flex;
-  gap: 70px;
-}
-
-main h1 {
-  position: relative;
-  text-align: center;
-  color: #000;
-  font-size: 40px;
-  font-style: normal;
-  font-weight: 700;
-  line-height: normal;
-  margin-top: 48px;
-}
-
-label {
-  display: inline-block;
-  margin-bottom: 0.5rem;
-}
-
-form {
-  text-align: center;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  /* align-items: flex-start;    */
-  gap: 15px;
-}
-.card-body {
-  width: 50%;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  gap: 40px;
-}
-
-.form-group {
-  text-align: start;
-}
-
-.form-control {
+  flex-direction: row;
+  gap: 10px;
   border-radius: 10px;
-  border: 2px solid #3545a5;
-  background: rgba(0, 102, 237, 0);
+  -webkit-border-radius: 10px;
+  -moz-border-radius: 10px;
+  -ms-border-radius: 10px;
+  -o-border-radius: 10px;
 }
 
-footer {
-  position: fixed;
-  bottom: 0;
-  width: 100%;
-  height: 260px;
-  background-color: #000;
-  box-sizing: border-box;
-  padding: 50px 240px;
+.container .content-ktp .content-ktp-note .right-part-warning {
+  margin-top: 10px;
+
 }
 
-.main-footer {
+.container .content-ktp .content-ktp-note .right-part-warning p {
+  margin-left: 20px;
   display: flex;
-  box-sizing: border-box;
-  align-items: start;
-  gap: 200px;
-  color: #fff;
+  flex-direction: row;
+  align-items: center;
+  gap: 5px;
 }
 
-.left-part {
+.container .content-ktp .content-ktp-note .right-part-warning i {
+  font-size: 4px;
+}
+
+
+
+/* content-footer */
+.content-footer {
   display: flex;
-  flex-direction: column;
-  gap: 30px;
+  justify-content: center;
+  align-items: center;
+  padding: 30px;
 }
 
-.socmed-logo {
-  display: flex;
-  font-size: 24px;
-  gap: 22px;
+.content-footer button {
+  cursor: pointer;
+  padding: 10px;
+  border-radius: 5px;
+  background-color: var(--primary-color);
+  -webkit-border-radius: 5px;
+  -moz-border-radius: 5px;
+  -ms-border-radius: 5px;
+  -o-border-radius: 5px;
+  border: 1px solid var(--primary-color);
+  transition: .3s ease-in-out;
+  -webkit-transition: .3s ease-in-out;
+  -moz-transition: .3s ease-in-out;
+  -ms-transition: .3s ease-in-out;
+  -o-transition: .3s ease-in-out;
 }
 
-.column-flex-text {
-  width: 100%;
-  display: flex;
-  align-items: start;
-  gap: 60px;
-}
-
-.tab-list {
-  display: flex;
-  flex-direction: column;
-}
-
-.tab-list a {
-  margin-top: 5px;
+.content-footer button a {
   text-decoration: none;
-  color: #fff;
+  color: var(--light-color);
 }
 
-.tab-contact-us p {
-  font-size: 14px;
+.content-footer button:hover {
+  border: 1px solid var(--primary-color);
+  background-color: transparent;
+}
+
+.content-footer button:hover a {
+  color: var(--primary-color);
 }
